Fixed code line numbering spacing, alignment problem

--- a/app/assets/stylesheets/code_line_numbering.css
+++ b/app/assets/stylesheets/code_line_numbering.css
@@ -16,7 +16,7 @@ pre a::before {
     content: counter(line-numbering);
     counter-increment: line-numbering;
     padding-right: 1em; /* space after numbers */
-    width: 25px;
+    width: 3em;
     text-align: right;
     opacity: 0.7;
     display: inline-block;
